--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>Welcome to Web Development!</h1>
-    <ul>
-      <li><a href="/labs/a1/index.html">Assignment 1</a></li>
-      <li><a href="/labs/a2/index.html">Assignment 2</a></li>
-      <li><a href="/labs/a3/index.html">Assignment 3</a></li>
-      <li><a href="/Kanbas/Courses/Home/screen.html">Kanbas</a></li>
-    </ul>
+    <!-- Only warning when the browser is not enabled JS engine. -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
